<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by AbdOo Saed from Egypt
  ~ all Copyright reserved
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrlRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back"
    android:gravity="center_horizontal"
    tools:context=".registrationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_task_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/TaskappRegistration"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
        <EditText
            android:id="@+id/ed_user_display_name_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/edittixt"
            android:drawableStart="@drawable/ic_user_name"
            android:drawableLeft="@drawable/ic_user_name"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:padding="3sp"
            android:textColor="#304FFD"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_app" />
        <EditText
            android:id="@+id/ed_user_name_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/edittixt"
            android:drawableStart="@drawable/ic_user_email"
            android:drawableLeft="@drawable/ic_user_email"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:padding="3sp"
            android:textColor="#304FFD"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_user_display_name_rg" />

        <EditText
            android:id="@+id/ed_password_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/edittixt"
            android:drawableLeft="@drawable/ic_user_password"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:maxLength="25"
            android:padding="3sp"
            android:textColor="#304FFD"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_user_name_rg"
            android:drawableStart="@drawable/ic_user_password" />

        <Button
            android:id="@+id/btn_rg"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_marginTop="25sp"
            android:background="@drawable/btn"
            android:onClick="btnRegister"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_rg" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center|top"
            android:onClick="tvLoginHere"
            android:text="@string/haveAcount"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_rg" />


        <include
            layout="@layout/prograss"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_rg" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>