<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by AbdOo Saed from Egypt
  ~ all Copyright reserved
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_back"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView

            android:id="@+id/tv_task_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/TaskappLogin"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/ed_user_name_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/edittixt"
            android:drawableStart="@drawable/ic_user_email"
            android:drawableLeft="@drawable/ic_user_email"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:padding="3sp"
            android:textColor="#304FFD"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_app" />

        <EditText
            android:id="@+id/ed_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/edittixt"
            android:drawableLeft="@drawable/ic_user_password"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:maxLength="25"
            android:padding="3sp"
            android:textColor="#304FFD"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_user_name_login" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_marginTop="25sp"
            android:background="@drawable/btn"
            android:onClick="btnLogin"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_login" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:onClick="tvRegister"
            android:text="@string/dontHaveAcount"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:onClick="tvForgetPassword"
            android:text="@string/forgetpassowrd"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />


        <include
            layout="@layout/prograss"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_password_login" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>